--- a/styles.css
+++ b/styles.css
@@ -4,4 +4,32 @@
     /* Font */
     font-family: "Outfit", sans-serif;
     font-weight: 400, 700;
+    vertical-align: top;
 }
+
+/* Structure */
+
+.container {
+    background-color: hsl(220, 15%, 55%);
+}
+
+.mainBlock {
+    background-color: hsl(0, 0%, 100%);
+    display: flex;
+    flex-direction: column;
+    margin-left: 40%;
+    margin-right: 40%;
+}
+
+/* Image */
+
+#qrcode {
+    width: 70%;
+    padding-left: 15%;
+    padding-right: 15%;
+    border-radius: 3.5%;
+}
+
+/* Main Text */
+
+/* Second Text */
