--- a/styles.css
+++ b/styles.css
@@ -20,20 +20,23 @@ body {
     margin-top: 10%;
     margin-left: 40%;
     margin-right: 40%;
+    border-radius: 4%;
 }
 
 /* Image */
 
 #qrcode {
     width: 90%;
+    margin-top: 5%;
     padding-left: 5%;
     padding-right: 5%;
-    border-radius: 3.5%;
+    border-radius: 5%;
 }
 
 /* Main Text */
 
 #mainText {
+    margin-top: 5%;
     text-align: center;
     padding-left: 10%;
     padding-right: 10%;
@@ -42,7 +45,9 @@ body {
 /* Second Text */
 
 #secondText {
+    margin-top: 3%;
     text-align: center;
     padding-left: 12%;
     padding-right: 12%;
+    margin-bottom: 10%;
 }
