--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+/* My screen resolution 2560x1440p */
+
 * {
     margin: 0;
     padding: 0;
@@ -12,10 +14,12 @@
 body {
     /* Changed the color because it's not the exact same as in preview */
     background-color: hsl(218, 50%, 80%);
+    overflow: hidden;
 }
 
 .mainBlock {
     background-color: hsl(0, 0%, 100%);
+    box-shadow: inset 0 0 1em hsl(212, 45%, 89%), 0 0 2em hsl(212, 45%, 89%);
     display: flex;
     flex-direction: column;
     margin-top: 12.5%;
